--- a/index.html
+++ b/index.html
@@ -10,161 +10,136 @@
       integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x"
       crossorigin="anonymous"
     />
-    <link rel="stylesheet" href="index.css" />
+    <link rel="stylesheet" href="stylesheet/index.css" />
     <title>CENTINO - Inicio</title>
   </head>
   <body>
     <header>
       <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <div class="container-fluid">
-          <a class="navbar-brand" href="index.html">
-            <img
-              class="logo-brand"
-              src="./img/logo_transparente.png"
-              alt="logo"
-            />
-          </a>
-          <button
-            class="navbar-toggler"
-            type="button"
-            data-bs-toggle="collapse"
-            data-bs-target="#navbarNavDropdown"
-            aria-controls="navbarNavDropdown"
-            aria-expanded="false"
-            aria-label="Toggle navigation"
-          >
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div
-            class="collapse navbar-collapse justify-content-end"
-            id="navbarNavDropdown"
-          >
-            <ul class="navbar-nav">
-              <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="index.html"
-                  >Inicio</a
-                >
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="nuestrocentro.html">Nuestro Centro</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="especialidades.html"
-                  >Especialidades</a
-                >
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="estudios.html">Estudios</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="cirugias.html">Cirugías</a>
-              </li>
-              <li class="nav-item dropdown">
-                <a
-                  class="nav-link dropdown-toggle"
-                  href="portal.html"
-                  id="navbarDropdownMenuLink"
-                  role="button"
-                  data-bs-toggle="dropdown"
-                  aria-expanded="false"
-                >
-                  Mi Portal
-                </a>
-                <ul
-                  class="dropdown-menu dropdown-menu-dark"
-                  aria-labelledby="dropdownMenuButton2"
-                >
-                  <li>
-                    <a
-                      class="dropdown-item disabled"
-                      href="portal.html"
-                      aria-disabled="true"
-                      >Intranet</a
-                    >
-                  </li>
-                  <li>
-                    <a class="dropdown-item" href="portal.html">Mi Centro</a>
-                  </li>
-                </ul>
-              </li>
-            </ul>
-          </div>
+        <a class="navbar-brand" href="index.html">
+          <img
+            class="logo-brand"
+            src="./img/logo_transparente.png"
+            alt="logo"
+          />
+        </a>
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#navbarNavDropdown"
+          aria-controls="navbarNavDropdown"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div
+          class="collapse navbar-collapse justify-content-end"
+          id="navbarNavDropdown"
+        >
+          <ul class="navbar-nav">
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="index.html"
+                >Inicio</a
+              >
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="nuestrocentro.html">Nuestro Centro</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="especialidades.html">Especialidades</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="estudios.html">Estudios</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="cirugias.html">Cirugías</a>
+            </li>
+            <li class="nav-item dropdown">
+              <a
+                class="nav-link dropdown-toggle"
+                href="portal.html"
+                id="navbarDropdownMenuLink"
+                role="button"
+                data-bs-toggle="dropdown"
+                aria-expanded="false"
+              >
+                Mi Portal
+              </a>
+              <ul
+                class="dropdown-menu dropdown-menu-dark"
+                aria-labelledby="dropdownMenuButton2"
+              >
+                <li>
+                  <a
+                    class="dropdown-item disabled"
+                    href="portal.html"
+                    aria-disabled="true"
+                    >Intranet</a
+                  >
+                </li>
+                <li>
+                  <a class="dropdown-item" href="portal.html">Mi Centro</a>
+                </li>
+              </ul>
+            </li>
+          </ul>
         </div>
       </nav>
     </header>
-    <div>
-      <a href="portal.html" class="btn btn-main">SACAR UN TURNO</a>
+    <main class="main">
+      <a href="portal.html" class="btn btn-main">AGENDAR UN TURNO</a>
+      <div id="carouselExampleDark" class="carousel carousel-dark slide" data-bs-ride="carousel">
+        <div class="carousel-indicators">
+          <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+          <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="1" aria-label="Slide 2"></button>
+          <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="2" aria-label="Slide 3"></button>
+        </div>
+        <div class="carousel-inner">
+          <div class="carousel-item active" data-bs-interval="10000">
+            <img src="/img/slide5_adobespark.jpg" class="d-block w-100" alt="Slide 1">
+            <div class="carousel-caption d-none d-md-block">
+              <h5>Bienvenidos a CentInO</h5>
+              <p>Centro Integral Oftalmológico de alta complejidad para la salud visual</p>
+            </div>
+          </div>
+          <div class="carousel-item" data-bs-interval="2000">
+            <img src="/img/slide2_adobespark.jpg" class="d-block w-100" alt="Slide 2">
+            <div class="carousel-caption d-none d-md-block">
+              <h5>Staff Profesional</h5>
+              <p>Los mejores profesionales trabajan dia a dia para brindarle la mejor atención</p>
+            </div>
+          </div>
+          <div class="carousel-item">
+            <img src="/img/slide3_adobespark.jpg" class="d-block w-100" alt="Slide 3">
+            <div class="carousel-caption d-none d-md-block">
+              <h5>Completitud</h5>
+              <p>Contamos con profesionales de todas las especialidades oftalmológicas y la última tecnología</p>
+            </div>
+          </div>
+        </div>
+        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleDark" data-bs-slide="prev">
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Previous</span>
+        </button>
+        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleDark" data-bs-slide="next">
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Next</span>
+        </button>
     </div>
-    <div
-      id="carouselExampleIndicators"
-      class="carousel slide"
-      data-bs-ride="carousel"
-    >
-      <div class="carousel-indicators">
-        <button
-          type="button"
-          data-bs-target="#carouselExampleIndicators"
-          data-bs-slide-to="0"
-          class="active"
-          aria-current="true"
-          aria-label="Slide 1"
-        ></button>
-        <button
-          type="button"
-          data-bs-target="#carouselExampleIndicators"
-          data-bs-slide-to="1"
-          aria-label="Slide 2"
-        ></button>
-        <button
-          type="button"
-          data-bs-target="#carouselExampleIndicators"
-          data-bs-slide-to="2"
-          aria-label="Slide 3"
-        ></button>
-      </div>
-      <div class="carousel-inner">
-        <div class="carousel-item active">
-          <img src="./img/slide1.jpg" class="d-block w-100" alt="slide1" />
-        </div>
-        <div class="carousel-item">
-          <img src="./img/slide2.jpg" class="d-block w-100" alt="slide2" />
-        </div>
-        <div class="carousel-item">
-          <img src="./img/slide3.jpg" class="d-block w-100" alt="slide3" />
-        </div>
-      </div>
-      <button
-        class="carousel-control-prev"
-        type="button"
-        data-bs-target="#carouselExampleIndicators"
-        data-bs-slide="prev"
-      >
-        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-        <span class="visually-hidden">Previous</span>
-      </button>
-      <button
-        class="carousel-control-next"
-        type="button"
-        data-bs-target="#carouselExampleIndicators"
-        data-bs-slide="next"
-      >
-        <span class="carousel-control-next-icon" aria-hidden="true"></span>
-        <span class="visually-hidden">Next</span>
-      </button>
-    </div>
-    <div class="container-fluid">
       <div class="row justify-content-between mt-5">
-        <div class="col-md-4 text-center">
+        <div class="col-lg-4 col-md-4 col-xs-12 text-center">
           <h2>CONTACTO</h2>
           <p>contacto@centino.com.ar</p>
           <p>11 4123-4567</p>
         </div>
-        <div class="col-md-4 text-center">
+        <div class="col-lg-4 col-md-4 col-xs-12 text-center">
           <h2>HORARIOS</h2>
           <p>de Lunes a Viernes</p>
           <p>de 8:30hs a 20:00hs</p>
         </div>
-        <div class="col-md-4 text-center">
+        <div class="col-lg-4 col-md-4 col-xs-12 text-center">
           <h2>UBICACIÓN</h2>
           <p>Calle Falsa 1234</p>
           <p>Ciudad Autónoma de Buenos Aires</p>
@@ -178,74 +153,86 @@
           ></iframe>
         </div>
       </div>
-    </div>
-    <div class="container-fluid container-bottom">
-      <div class="row justify-content-between mt-5">
-        <div class="col-md-4 mt-5 container-video">
-          <iframe
-            width="700"
-            height="415"
-            src="https://www.youtube.com/embed/vbLKerkIrkY?controls=0"
-            title="YouTube video player"
-            frameborder="0"
-            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-            allowfullscreen
-          ></iframe>
-        </div>
-        <div class="col-md-4 text-center mt-5 container-form">
-          <form class="form row g-3" action="#">
-            <h2>
-              Realice aqui su consulta, en breve estaremos respondiéndole.
-            </h2>
-            <div class="col-md-6">
-              <label for="inputNombre" class="form-label">Nombre</label>
-              <input type="nombre" class="form-control" id="inputNombre" />
-            </div>
-            <div class="col-md-6">
-              <label for="inputApellido" class="form-label">Apellido</label>
-              <input type="apellido" class="form-control" id="inputApellido" />
-            </div>
-            <div class="col-12">
-              <label for="inputEmail" class="form-label">E-mail</label>
+      <div class="row justify-content-center mt-5 bpage">
+        <div class="col-12 container-form">
+          <form action="#" class="form">
+            <legend class="legend-form mt-5 mb-5">
+              Escriba Aqui su consulta. En breve estaremos respondiéndole!
+            </legend>
+          <div class="form-container">
+            <div class="mb-3">
+              <label for="exampleFormControlInput1" class="form-label"
+                >Nombre y Apellido</label
+              >
               <input
-                type="text"
+                type="nya"
                 class="form-control"
-                id="inputEmail"
-                placeholder="ejemplo@gmail.com"
+                id="exampleFormControlInput1"
+                placeholder=""
               />
             </div>
-            <div class="col-12">
-              <select
-                class="form-select form-select-sm"
-                aria-label=".form-select-sm example"
+            <div class="mb-3">
+              <label for="exampleFormControlInput1" class="form-label"
+                >Teléfono o Celular</label
               >
-                <option selected>Cobertura Médica</option>
-                <option value="1">OSDE</option>
-                <option value="2">SWISSMEDICAL</option>
-                <option value="3">OMINT</option>
-                <option value="4">PARTICULAR</option>
-              </select>
+              <input
+                type="telefono"
+                class="form-control"
+                id="exampleFormControlInput1"
+                placeholder=""
+              />
             </div>
-            <div class="col-12">
-              <div class="form-check">
-                <input
-                  class="form-check-input"
-                  type="checkbox"
-                  id="gridCheck"
-                />
-                <label class="form-check-label" for="gridCheck">
-                  Ya soy paciente
-                </label>
-              </div>
+            <div class="mb-3">
+              <label for="exampleFormControlInput1" class="form-label"
+                >Email</label
+              >
+              <input
+                type="email"
+                class="form-control"
+                id="exampleFormControlInput1"
+                placeholder="nombre@ejemplo.com"
+              />
             </div>
-            <div class="col-12">
-              <button type="submit" class="btn-form btn-primary">Enviar</button>
+            <div class="mb-3">
+              <label for="exampleFormControlTextarea1" class="form-label"
+                >Escriba motivo de su consulta</label
+              >
+              <textarea
+                class="form-control"
+                id="exampleFormControlTextarea1"
+                rows="2"
+              ></textarea>
+            </div>
+            <select
+              class="form-select mt-5"
+              aria-label="Default select example"
+            >
+              <option selected>Cobertura Médica</option>
+              <option value="1">Osde</option>
+              <option value="2">Swiss Medical</option>
+              <option value="3">Omint</option>
+              <option value="4">Particular</option>
+              <option value="5">Otros</option>
+            </select>
+            <div class="form-check form-switch mt-5">
+              <input
+                class="form-check-input"
+                type="checkbox"
+                id="flexSwitchCheckDefault"
+              />
+              <label class="form-check-label" for="flexSwitchCheckDefault"
+                >Ya soy paciente</label
+              >
+            </div>
+            <div class="col-12 mt-5 mb-5">
+              <button type="submit" class="btn btn-primary">Enviar</button>
             </div>
           </form>
         </div>
       </div>
     </div>
-    <footer class="container-fluid container-footer">
+    </main>
+    <footer class="container-fluid footer bg-light">
       <a class="footer-brand" href="index.html">
         <img class="logo-brand" src="./img/logo_transparente.png" alt="logo" />
       </a>
@@ -254,17 +241,17 @@
       </h2>
       <div class="footer-rrss">
         <a href="https://www.facebook.com/">
-          <img class="logo-img" src="./img/fb_logo.png" alt="fb_logo" />
+          <img class="logo-rrss" src="./img/fb_logo.png" alt="fb_logo" />
         </a>
         <a href="https://www.instagram.com">
-          <img class="logo-img" src="./img/ig_logo.png" alt="ig_logo" />
+          <img class="logo-rrss" src="./img/ig_logo.png" alt="ig_logo" />
         </a>
         <a href="https://www.youtube.com">
-          <img class="logo-img" src="./img/youtube_logo.png" alt="ytube_logo" />
+          <img class="logo-rrss" src="./img/youtube_logo.png" alt="ytube_logo" />
         </a>
         <a href="https://www.whatsapp.com">
           <img
-            class="logo-img"
+            class="logo-rrss"
             src="./img/whatsapp_logo.png"
             alt="whatsapp_logo"
           />
