imagenes de carousel

--- a/index.html
+++ b/index.html
@@ -98,21 +98,21 @@
         </div>
         <div class="carousel-inner">
           <div class="carousel-item active" data-bs-interval="10000">
-            <img src="/img/slide5_adobespark.jpg" class="d-block w-100" alt="Slide 1">
+            <img src="./img/child.jpg" class="d-block w-100" alt="Slide 1">
             <div class="carousel-caption d-none d-md-block">
               <h5>Bienvenidos a CentInO</h5>
               <p>Centro Integral Oftalmológico de alta complejidad para la salud visual</p>
             </div>
           </div>
           <div class="carousel-item" data-bs-interval="2000">
-            <img src="/img/slide2_adobespark.jpg" class="d-block w-100" alt="Slide 2">
+            <img src="./img/op.jpg" class="d-block w-100" alt="Slide 2">
             <div class="carousel-caption d-none d-md-block">
               <h5>Staff Profesional</h5>
               <p>Los mejores profesionales trabajan dia a dia para brindarle la mejor atención</p>
             </div>
           </div>
           <div class="carousel-item">
-            <img src="/img/slide3_adobespark.jpg" class="d-block w-100" alt="Slide 3">
+            <img src="./img/or.jpg" class="d-block w-100" alt="Slide 3">
             <div class="carousel-caption d-none d-md-block">
               <h5>Completitud</h5>
               <p>Contamos con profesionales de todas las especialidades oftalmológicas y la última tecnología</p>
