--- a/especialidades.html
+++ b/especialidades.html
@@ -1,240 +1,234 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./stylesheet/generalstyle.css"/>
-    <link rel="stylesheet" href="./stylesheet/especialidades.css"/>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link
-      href="ttps://fonts.googleapis.com/css2?family=Roboto&family=Roboto+Slab:wght@300&display=swap"
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css"
       rel="stylesheet"
+      integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x"
+      crossorigin="anonymous"
     />
+    <link rel="stylesheet" href="./stylesheet/generalstyle.css" />
+    <link rel="stylesheet" href="./stylesheet/especialidades.css" />
     <title>CENTINO - Especialidades</title>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
-</head>
-<body class="body--container">
-  <header class="header--container">
-    <img class="header__logo" src="./img/logo_transparente.png" alt="logo" />
-    <nav class="header__nav--container">
-      <ul>
-        <li class="header__nav--li"><a href="index.html">INICIO</a></li>
-        <li class="header__nav--li">
-          <a href="nuestrocentro.html">NUESTRO CENTRO</a>
-        </li>
-        <li class="header__nav--li">
-          <a href="especialidades.html">ESPECIALIDADES</a>
-        </li>
-        <li class="header__nav--li"><a href="estudios.html">ESTUDIOS</a></li>
-        <li class="header__nav--li"><a href="cirugias.html">CIRUGÍAS</a></li>
-        <li class="header__nav--li"><a href="portal.html">MI PORTAL</a></li>
-      </ul>
-    </nav>
-  </header>
-  <main class="main--container">
-            <table> 
-              <h2>RETINA</h2>
-              <tr>
-                  <th>Dr/Dra. APELLIDO, Nombre</th>
-                  <th>Dr/Dra. APELLIDO, Nombre</th>
-                  <th>Dr/Dra. APELLIDO, Nombre</th>
-                </tr>
-                <tr>
-                  <td><img src="./img/iconoDr.png" alt="foto_doctor"/></a></td>
-                  <td><img src="./img/iconoDr.png" alt="foto_doctor"/></a></td>
-                  <td><img src="./img/iconoDr.png" alt="foto_doctor"/></a></td>
-                </tr>
-                <tr>
-                  <td>Lunes y Martes</td>
-                  <td>Miércoles y Jueves</td>
-                  <td>Viernes</td>
-                </tr>
-                <tr>
-                  <td><a href="portal.html">Enviar Mensaje</a></td>
-                  <td><a href="portal.html">Enviar Mensaje</a></td>
-                  <td><a href="portal.html">Enviar Mensaje</a</td>
-                </tr>
-            </table>
-            <table>
-              <h2>GLAUCOMA</h2>
-              <tr>
-                <th>Dr/Dra. APELLIDO, Nombre</th>
-                <th>Dr/Dra. APELLIDO, Nombre</th>
-              </tr>
-              <tr>
-                <td><img src="./img/iconoDr.png" alt="foto_doctor"/></a></td>
-                <td><img src="./img/iconoDr.png" alt="foto_doctor"/></a></td>
-              </tr>
-              <tr>
-                <td>Martes</td>
-                <td>Jueves</td>
-              </tr>
-              <tr>
-                <td><a href="portal.html">Enviar Mensaje</a></td>
-                <td><a href="portal.html">Enviar Mensaje</a></td>
-              </tr>
-            </table>          
-            <table>
-              <h2>CÓRNEA Y CATARATAS</h2>
-              <tr>
-                <th>Dr/Dra. APELLIDO, Nombre</th>
-              </tr>
-              <tr>
-                <td><img src="./img/iconoDr.png" alt="foto_doctor"/></a></td>
-              </tr>
-              <tr>
-                <td>Miércoles y Jueves</td>
-              </tr>
-              <tr>
-                <td><a href="portal.html">Enviar Mensaje</a></td>
-              </tr>
-           </table>
-            <table>
-              <h2>UVEÍTIS</h2>
-              <tr>
-                <th>Dr/Dra. APELLIDO, Nombre</th>
-                <th>Dr/Dra. APELLIDO, Nombre</th>
-              </tr>
-              <tr>
-                <td><img src="./img/iconoDr.png" alt="foto_doctor"/></a></td>
-                <td><img src="./img/iconoDr.png" alt="foto_doctor"/></a></td>
-              </tr>
-              <tr>
-                <td>Martes y Jueves</td>
-                <td>Lunes y Miércoles</td>
-              </tr>
-              <tr>
-                <td><a href="portal.html">Enviar Mensaje</a></td>
-                <td><a href="portal.html">Enviar Mensaje</a></td>
-              </tr>
-            </table>
-            <table>
-              <h2>SUPERFICIE OCULAR</h2>
-              <tr>
-                <th>Dr/Dra. APELLIDO, Nombre</th>
-              </tr>
-              <tr>
-                <td><img src="./img/iconoDr.png" alt="foto_doctor"/></a></td>
-              </tr>
-              <tr>
-                <td>Viernes</td>
-              </tr>
-              <tr>
-                <td><a href="portal.html">Enviar Mensaje</a></td>
-            </table>
-            <table>
-              <h2>ESTRABISMO</h2>
-              <tr>
-                <th>Dr/Dra. APELLIDO, Nombre</th>
-                <th>Dr/Dra. APELLIDO, Nombre</th>
-              </tr>
-              <tr>
-                <td><img src="./img/iconoDr.png" alt="foto_doctor"/></a></td>
-                <td><img src="./img/iconoDr.png" alt="foto_doctor"/></a></td>
-              </tr>
-              <tr>
-                <td>Lunes y Miércoles</td>
-                <td>Martes y Jueves</td>
-              </tr>
-              <tr>
-                <td><a href="portal.html">Enviar Mensaje</a></td>
-                <td><a href="portal.html">Enviar Mensaje</a></td>
-              </tr>
-            </table>
-            <table>
-              <h2>VÍAS LAGRIMALES Y PLÁSTICA OCULAR</h2>
-              <tr>
-                <th>Dr/Dra. APELLIDO, Nombre</th>
-              </tr>
-              <tr>
-                <td><img src="./img/iconoDr.png" alt="foto_doctor" /></a></td>
-              </tr>
-              <tr>
-                <td>Viernes</td>
-              </tr>
-              <tr>
-                <td><a href="portal.html">Enviar Mensaje</a></td>          
-              </tr>
-            </table>
-            <table>
-              <h2>NEUROOFTALMOLOGÍA</h2>
-              <tr>
-                <th>Dr/Dra. APELLIDO, Nombre</th>
-                <th>Dr/Dra. APELLIDO, Nombre</th>
-                <th>Dr/Dra. APELLIDO, Nombre</th>
-              </tr>
-              <tr>
-                <td><img src="./img/iconoDr.png" alt="foto_doctor"/></a></td>
-                <td><img src="./img/iconoDr.png" alt="foto_doctor"/></a></td>
-                <td><img src="./img/iconoDr.png" alt="foto_doctor"/></a></td>
-              </tr>
-              <tr>
-                <td>Lunes y Miércoles</td>
-                <td>Martes</td>
-                <td>Jueves y Viernes</td>
-              </tr>
-              <tr>
-                <td><a href="portal.html">Enviar Mensaje</a></td>
-                <td><a href="portal.html">Enviar Mensaje</a></td>
-                <td><a href="portal.html">Enviar Mensaje</a</td>
-              </tr>
-            </table>
-            <table>
-              <h2>BAJA VISIÓN</h2>
-              <tr>
-                <th>Dr/Dra. APELLIDO, Nombre</th>
-              </tr>
-              <tr>
-                <td><img src="./img/iconoDr.png" alt="foto_doctor"/></a></td>
-              </tr>
-              <tr>
-                <td>Lunes, Miércoles y Viernes</td>
-              </tr>
-              <tr>
-                <td><a href="portal.html">Enviar Mensaje</a></td>
-              </tr>
-            </table>
-  </main>
-    <footer class="footer--container">
-      <img class="footer__logo" src="./img/logo_transparente.png" alt="logo" />
-      <h2 class="footer__copywrite">
-        © 2021 - Todos los derechos reservados. By Michelle Ticchetti.
-      </h2>
-      <div>
-        <a href="https://www.facebook.com/">
+  </head>
+  <body>
+    <header>
+      <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <a class="navbar-brand" href="index.html">
           <img
-            src="./img/fb_logo.png"
-            alt="fb_logo"
-            width="40px"
-            height="40px"
+            class="logo-brand"
+            src="./img/logo_transparente.png"
+            alt="logo"
           />
         </a>
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#navbarNavDropdown"
+          aria-controls="navbarNavDropdown"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div
+          class="collapse navbar-collapse justify-content-end"
+          id="navbarNavDropdown"
+        >
+          <ul class="navbar-nav">
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="index.html"
+                >Inicio</a
+              >
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="nuestrocentro.html">Nuestro Centro</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="especialidades.html">Especialidades</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="estudios.html">Estudios</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="cirugias.html">Cirugías</a>
+            </li>
+            <li class="nav-item dropdown">
+              <a
+                class="nav-link dropdown-toggle"
+                href="portal.html"
+                id="navbarDropdownMenuLink"
+                role="button"
+                data-bs-toggle="dropdown"
+                aria-expanded="false"
+              >
+                Mi Portal
+              </a>
+              <ul
+                class="dropdown-menu dropdown-menu-dark"
+                aria-labelledby="dropdownMenuButton2"
+              >
+                <li>
+                  <a
+                    class="dropdown-item disabled"
+                    href="portal.html"
+                    aria-disabled="true"
+                    >Intranet</a
+                  >
+                </li>
+                <li>
+                  <a class="dropdown-item" href="portal.html">Mi Centro</a>
+                </li>
+              </ul>
+            </li>
+          </ul>
+        </div>
+      </nav>
+    </header>
+    <main class="container-fluid">
+      <div class="row">
+        <div class="col-12 especialidad">
+          <h2>RETINA</h2>
+          <h5><img src="./img/iconoDr.png" alt="foto_doctor" /></h5>
+          <h3>Dr/Dra. APELLIDO, Nombre</h3>
+          <h4>Lunes y Martes</h4>
+          <h5><a href="portal.html">Enviar Mensaje</a></h5>
+          <h5><img src="./img/iconoDr.png" alt="foto_doctor" /></h5>
+          <h3>Dr/Dra. APELLIDO, Nombre</h3>
+          <h4>Miércoles y Jueves</h4>
+          <h5><a href="portal.html">Enviar Mensaje</a></h5>
+          <h5><img src="./img/iconoDr.png" alt="foto_doctor" /></h5>
+          <h3>Dr/Dra. APELLIDO, Nombre</h3>
+          <h4>Viernes</h4>
+          <h5><a href="portal.html">Enviar Mensaje</a></h5>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-12 especialidad">
+          <h2>GLAUCOMA</h2>
+          <h5><img src="./img/iconoDr.png" alt="foto_doctor" /></h5>
+          <h3>Dr/Dra. APELLIDO, Nombre</h3>
+          <h4>Lunes y Martes</h4>
+          <h5><a href="portal.html">Enviar Mensaje</a></h5>
+          <h5><img src="./img/iconoDr.png" alt="foto_doctor" /></h5>
+          <h3>Dr/Dra. APELLIDO, Nombre</h3>
+          <h4>Miércoles y Jueves</h4>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-12 especialidad">
+          <h2>CÓRNEA Y CATARATAS</h2>
+          <h5><img src="./img/iconoDr.png" alt="foto_doctor" /></h5>
+          <h3>Dr/Dra. APELLIDO, Nombre</h3>
+          <h4>Miércoles y Jueves</h4>
+          <h5><a href="portal.html">Enviar Mensaje</a></h5>
+          <h5><img src="./img/iconoDr.png" alt="foto_doctor" /></h5>
+          <h3>Dr/Dra. APELLIDO, Nombre</h3>
+          <h4>Viernes</h4>
+          <h5><a href="portal.html">Enviar Mensaje</a></h5>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-12 especialidad">
+          <h2>UVEÍTIS</h2>
+          <h5><img src="./img/iconoDr.png" alt="foto_doctor" /></h5>
+          <h3>Dr/Dra. APELLIDO, Nombre</h3>
+          <h4>Viernes</h4>
+          <h5><a href="portal.html">Enviar Mensaje</a></h5>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-12 especialidad">
+          <h2>SUPERFICIE OCULAR</h2>
+          <h5><img src="./img/iconoDr.png" alt="foto_doctor" /></h5>
+          <h3>Dr/Dra. APELLIDO, Nombre</h3>
+          <h4>Lunes y Martes</h4>
+          <h5><a href="portal.html">Enviar Mensaje</a></h5>
+          <h5><img src="./img/iconoDr.png" alt="foto_doctor" /></h5>
+          <h3>Dr/Dra. APELLIDO, Nombre</h3>
+          <h4>Miércoles y Jueves</h4>
+          <h5><a href="portal.html">Enviar Mensaje</a></h5>
+          <h5><img src="./img/iconoDr.png" alt="foto_doctor" /></h5>
+          <h3>Dr/Dra. APELLIDO, Nombre</h3>
+          <h4>Viernes</h4>
+          <h5><a href="portal.html">Enviar Mensaje</a></h5>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-12 especialidad">
+          <h2>ESTRABISMO</h2>
+          <h5><img src="./img/iconoDr.png" alt="foto_doctor" /></h5>
+          <h3>Dr/Dra. APELLIDO, Nombre</h3>
+          <h4>Lunes y Martes</h4>
+          <h5><a href="portal.html">Enviar Mensaje</a></h5>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-12 especialidad">
+          <h2>VÍAS LAGRIMALES Y PLÁSTICA OCULAR</h2>
+          <h5><img src="./img/iconoDr.png" alt="foto_doctor" /></h5>
+          <h3>Dr/Dra. APELLIDO, Nombre</h3>
+          <h4>Lunes y Martes</h4>
+          <h5><a href="portal.html">Enviar Mensaje</a></h5>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-12 especialidad">
+          <h2>NEUROOFTALMOLOGÍA</h2>
+          <h5><img src="./img/iconoDr.png" alt="foto_doctor" /></h5>
+          <h3>Dr/Dra. APELLIDO, Nombre</h3>
+          <h4>Lunes y Miércoles</h4>
+          <h5><a href="portal.html">Enviar Mensaje</a></h5>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-12 especialidad">
+          <h2>BAJA VISIÓN</h2>
+          <h5><img src="./img/iconoDr.png" alt="foto_doctor" /></h5>
+          <h3>Dr/Dra. APELLIDO, Nombre</h3>
+          <h4>Lunes y Miércoles</h4>
+          <h5><a href="portal.html">Enviar Mensaje</a></h5>
+        </div>
+      </div>
+    </main>
+    <footer class="container-fluid footer bg-light">
+      <a class="footer-brand" href="index.html">
+        <img class="logo-brand" src="./img/logo_transparente.png" alt="logo" />
+      </a>
+      <h2 class="footer-copywrite">
+        © 2021 - Todos los derechos reservados. By Michelle Ticchetti.
+      </h2>
+      <div class="footer-rrss">
+        <a href="https://www.facebook.com/">
+          <img class="logo-rrss" src="./img/fb_logo.png" alt="fb_logo" />
+        </a>
         <a href="https://www.instagram.com">
-          <img
-            src="./img/ig_logo.png"
-            alt="ig_logo"
-            width="40px"
-            height="40px"
-          />
+          <img class="logo-rrss" src="./img/ig_logo.png" alt="ig_logo" />
         </a>
         <a href="https://www.youtube.com">
           <img
+            class="logo-rrss"
             src="./img/youtube_logo.png"
             alt="ytube_logo"
-            width="40px"
-            height="40px"
           />
         </a>
         <a href="https://www.whatsapp.com">
           <img
+            class="logo-rrss"
             src="./img/whatsapp_logo.png"
             alt="whatsapp_logo"
-            width="40px"
-            height="40px"
           />
         </a>
       </div>
     </footer>
-</body>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4"
+      crossorigin="anonymous"
+    ></script>
+  </body>
 </html>
