--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
       integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x"
       crossorigin="anonymous"
     />
+    <link rel="stylesheet" href="./stylesheet/generalstyle.css" />
     <link rel="stylesheet" href="stylesheet/index.css" />
     <title>CENTINO - Inicio</title>
   </head>
@@ -88,46 +89,18 @@
         </div>
       </nav>
     </header>
-    <main class="main">
-      <a href="portal.html" class="btn btn-main">AGENDAR UN TURNO</a>
-      <div id="carouselExampleDark" class="carousel carousel-dark slide" data-bs-ride="carousel">
-        <div class="carousel-indicators">
-          <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-          <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="1" aria-label="Slide 2"></button>
-          <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="2" aria-label="Slide 3"></button>
-        </div>
-        <div class="carousel-inner">
-          <div class="carousel-item active" data-bs-interval="10000">
-            <img src="./img/child.jpg" class="d-block w-100" alt="Slide 1">
-            <div class="carousel-caption d-none d-md-block">
+  <main class="container-fluid">
+      <section class="bgimage">
+        <div class="container-fluid">
+          <div class="row">
+            <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
               <h5>Bienvenidos a CentInO</h5>
               <p>Centro Integral Oftalmológico de alta complejidad para la salud visual</p>
             </div>
           </div>
-          <div class="carousel-item" data-bs-interval="2000">
-            <img src="./img/op.jpg" class="d-block w-100" alt="Slide 2">
-            <div class="carousel-caption d-none d-md-block">
-              <h5>Staff Profesional</h5>
-              <p>Los mejores profesionales trabajan dia a dia para brindarle la mejor atención</p>
-            </div>
-          </div>
-          <div class="carousel-item">
-            <img src="./img/or.jpg" class="d-block w-100" alt="Slide 3">
-            <div class="carousel-caption d-none d-md-block">
-              <h5>Completitud</h5>
-              <p>Contamos con profesionales de todas las especialidades oftalmológicas y la última tecnología</p>
-            </div>
-          </div>
         </div>
-        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleDark" data-bs-slide="prev">
-          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-          <span class="visually-hidden">Previous</span>
-        </button>
-        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleDark" data-bs-slide="next">
-          <span class="carousel-control-next-icon" aria-hidden="true"></span>
-          <span class="visually-hidden">Next</span>
-        </button>
-    </div>
+      </section>
+      <a href="portal.html" class="btn btn-main">AGENDAR UN TURNO</a>
       <div class="row justify-content-between mt-5">
         <div class="col-lg-4 col-md-4 col-xs-12 text-center">
           <h2>CONTACTO</h2>
@@ -230,16 +203,20 @@
           </form>
         </div>
       </div>
-    </div>
     </main>
+  </div>
     <footer class="container-fluid footer bg-light">
-      <a class="footer-brand" href="index.html">
+     <div class="footer-brand">
+      <a href="index.html">
         <img class="logo-brand" src="./img/logo_transparente.png" alt="logo" />
       </a>
-      <h2 class="footer-copywrite">
+    </div>
+    <div class="footer-copywrite">
+      <h2>
         © 2021 - Todos los derechos reservados. By Michelle Ticchetti.
       </h2>
-      <div class="footer-rrss">
+    </div>
+    <div class="footer-rrss">
         <a href="https://www.facebook.com/">
           <img class="logo-rrss" src="./img/fb_logo.png" alt="fb_logo" />
         </a>
