--- a/nuestrocentro.html
+++ b/nuestrocentro.html
@@ -4,131 +4,148 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x"
+      crossorigin="anonymous"
+    />
     <link rel="stylesheet" href="./stylesheet/generalstyle.css" />
     <link rel="stylesheet" href="./stylesheet/nuestrocentro.css" />
-    <link
-      href="ttps://fonts.googleapis.com/css2?family=Roboto&family=Roboto+Slab:wght@300&display=swap"
-      rel="stylesheet"
-    />
     <title>CENTINO - Nuestro Centro</title>
-    <link
-      rel="stylesheet"
-      href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
-      integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
-      crossorigin="anonymous"
-    />
-    <script
-      src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
-      integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
-      crossorigin="anonymous"
-    ></script>
   </head>
   <body class="body--container">
-    <header class="header--container">
-      <img class="header__logo" src="./img/logo_transparente.png" alt="logo" />
-      <nav class="header__nav--container">
-        <ul>
-          <li class="header__nav--li"><a href="index.html">INICIO</a></li>
-          <li class="header__nav--li">
-            <a href="nuestrocentro.html">NUESTRO CENTRO</a>
-          </li>
-          <li class="header__nav--li">
-            <a href="especialidades.html">ESPECIALIDADES</a>
-          </li>
-          <li class="header__nav--li"><a href="estudios.html">ESTUDIOS</a></li>
-          <li class="header__nav--li"><a href="cirugias.html">CIRUGÍAS</a></li>
-          <li class="header__nav--li"><a href="portal.html">MI PORTAL</a></li>
-        </ul>
-      </nav>
-    </header>
-    <main class="main--container">
-      <div class="main--div__text">
-        <h2>
-          Somos un centro de alta complejidad dedicados al diagnostico y
-          tratamiento de patologías oftalmológicas.
-        </h2>
-        <h2>
-          Tratamos patologías tales como: Miopía, Catarata, Opacificación
-          Capsular, Astigmatismo, Hipermetropia, Presbicia, Chalazión,
-          Estrabismo, Glaucoma, Pterigion, Desprendimiento de Retina y
-          Degeneracion macular.
-        </h2>
-        <h2>
-          Contamos con equipamientos de última tecnología y con un equipo médico
-          calificado de gran trayectoria y calidez.
-        </h2>
-        <h2>
-          Atendemos a pacientes de todo el país y contamos con un sistema
-          integral de agendamiento de turnos e historia clínica.
-        </h2>
-      </div>
-      <div class="main--container__gallery">
-        <img class="sala" src="./img/office.jpg" alt="sala" width="20%" />
-        <img
-          class="cirujanos"
-          src="./img/cirujanos2.jpg"
-          alt="cirujanos2"
-          width="20%"
-        />
-        <img
-          class="lamparaHendidura"
-          src="./img/eyecheck.jpg"
-          alt="lampara"
-          width="20%"
-        />
-        <img
-          class="quirofano"
-          src="./img/quirofano3.jpg"
-          alt="quirofano"
-          width="20%"
-        />
-        <img
-          class="optometry"
-          src="./img/background_img.jpg"
-          alt="opto"
-          width="20%"
-        />
-      </div>
-    </main>
-    <footer class="footer--container">
-      <img class="footer__logo" src="./img/logo_transparente.png" alt="logo" />
-      <h2 class="footer__copywrite">
-        © 2021 - Todos los derechos reservados. By Michelle Ticchetti.
-      </h2>
-      <div>
-        <a href="https://www.facebook.com/">
+    <header>
+      <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <a class="navbar-brand" href="index.html">
           <img
-            src="./img/fb_logo.png"
-            alt="fb_logo"
-            width="40px"
-            height="40px"
+            class="logo-brand"
+            src="./img/logo_transparente.png"
+            alt="logo"
           />
         </a>
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#navbarNavDropdown"
+          aria-controls="navbarNavDropdown"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div
+          class="collapse navbar-collapse justify-content-end"
+          id="navbarNavDropdown"
+        >
+          <ul class="navbar-nav">
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="index.html"
+                >Inicio</a
+              >
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="nuestrocentro.html">Nuestro Centro</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="especialidades.html">Especialidades</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="estudios.html">Estudios</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="cirugias.html">Cirugías</a>
+            </li>
+            <li class="nav-item dropdown">
+              <a
+                class="nav-link dropdown-toggle"
+                href="portal.html"
+                id="navbarDropdownMenuLink"
+                role="button"
+                data-bs-toggle="dropdown"
+                aria-expanded="false"
+              >
+                Mi Portal
+              </a>
+              <ul
+                class="dropdown-menu dropdown-menu-dark"
+                aria-labelledby="dropdownMenuButton2"
+              >
+                <li>
+                  <a
+                    class="dropdown-item disabled"
+                    href="portal.html"
+                    aria-disabled="true"
+                    >Intranet</a
+                  >
+                </li>
+                <li>
+                  <a class="dropdown-item" href="portal.html">Mi Centro</a>
+                </li>
+              </ul>
+            </li>
+          </ul>
+        </div>
+      </nav>
+    </header>
+    <main class="container-fluid main">
+      <div class="row">
+        <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+          <div
+            id="carouselExampleSlidesOnly"
+            class="carousel slide"
+            data-bs-ride="carousel"
+          >
+            <div class="carousel-inner">
+              <div class="carousel-item active">
+                <img src="./img/child.jpg" class="d-block w-100" alt="slide1" />
+              </div>
+              <div class="carousel-item">
+                <img src="./img/op.jpg" class="d-block w-100" alt="slide2" />
+              </div>
+              <div class="carousel-item">
+                <img src="./img/or.jpg" class="d-block w-100" alt="slide3" />
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </main>
+    <footer class="container-fluid footer bg-light">
+      <a class="footer-brand" href="index.html">
+        <img class="logo-brand" src="./img/logo_transparente.png" alt="logo" />
+      </a>
+      <h2 class="footer-copywrite">
+        © 2021 - Todos los derechos reservados. By Michelle Ticchetti.
+      </h2>
+      <div class="footer-rrss">
+        <a href="https://www.facebook.com/">
+          <img class="logo-rrss" src="./img/fb_logo.png" alt="fb_logo" />
+        </a>
         <a href="https://www.instagram.com">
-          <img
-            src="./img/ig_logo.png"
-            alt="ig_logo"
-            width="40px"
-            height="40px"
-          />
+          <img class="logo-rrss" src="./img/ig_logo.png" alt="ig_logo" />
         </a>
         <a href="https://www.youtube.com">
           <img
+            class="logo-rrss"
             src="./img/youtube_logo.png"
             alt="ytube_logo"
-            width="40px"
-            height="40px"
           />
         </a>
         <a href="https://www.whatsapp.com">
           <img
+            class="logo-rrss"
             src="./img/whatsapp_logo.png"
             alt="whatsapp_logo"
-            width="40px"
-            height="40px"
           />
         </a>
       </div>
     </footer>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4"
+      crossorigin="anonymous"
+    ></script>
   </body>
 </html>
