modificando pags con bootstrap

--- a/especialidades.html
+++ b/especialidades.html
@@ -196,12 +196,18 @@
       </div>
     </main>
     <footer class="container-fluid footer bg-light">
-      <a class="footer-brand" href="index.html">
-        <img class="logo-brand" src="./img/logo_transparente.png" alt="logo" />
-      </a>
-      <h2 class="footer-copywrite">
-        © 2021 - Todos los derechos reservados. By Michelle Ticchetti.
-      </h2>
+      <div class="footer-brand">
+        <a href="index.html">
+          <img
+            class="logo-brand"
+            src="./img/logo_transparente.png"
+            alt="logo"
+          />
+        </a>
+      </div>
+      <div class="footer-copywrite">
+        <h2>© 2021 - Todos los derechos reservados. By Michelle Ticchetti.</h2>
+      </div>
       <div class="footer-rrss">
         <a href="https://www.facebook.com/">
           <img class="logo-rrss" src="./img/fb_logo.png" alt="fb_logo" />
