--- a/estudios.html
+++ b/estudios.html
@@ -89,24 +89,34 @@
         </div>
       </nav>
     </header>
-    <main>
-      <h2>OCT</h2>
-      <h2>UBM</h2>
-      <h2>Paquimetría corneal</h2>
-      <h2>Topografía corneal</h2>
-      <h2>Microscopía especular</h2>
-      <h2>AutoLensometro digital</h2>
-      <h2>IOL master</h2>
-      <h2>Ecometría</h2>
-      <h2>Campovisual Humphrey con pruebas centrales y periféricas</h2>
+    <main class="container-fluid main">
+      <div class="row">
+        <div class="col-12">
+          <h2>OCT</h2>
+          <h2>UBM</h2>
+          <h2>Paquimetría corneal</h2>
+          <h2>Topografía corneal</h2>
+          <h2>Microscopía especular</h2>
+          <h2>AutoLensometro digital</h2>
+          <h2>IOL master</h2>
+          <h2>Ecometría</h2>
+          <h2>Campovisual Humphrey con pruebas centrales y periféricas</h2>
+        </div>
+      </div>
     </main>
     <footer class="container-fluid footer bg-light">
-      <a class="footer-brand" href="index.html">
-        <img class="logo-brand" src="./img/logo_transparente.png" alt="logo" />
-      </a>
-      <h2 class="footer-copywrite">
-        © 2021 - Todos los derechos reservados. By Michelle Ticchetti.
-      </h2>
+      <div class="footer-brand">
+        <a href="index.html">
+          <img
+            class="logo-brand"
+            src="./img/logo_transparente.png"
+            alt="logo"
+          />
+        </a>
+      </div>
+      <div class="footer-copywrite">
+        <h2>© 2021 - Todos los derechos reservados. By Michelle Ticchetti.</h2>
+      </div>
       <div class="footer-rrss">
         <a href="https://www.facebook.com/">
           <img class="logo-rrss" src="./img/fb_logo.png" alt="fb_logo" />
