--- a/nuestrocentro.html
+++ b/nuestrocentro.html
@@ -89,36 +89,38 @@
         </div>
       </nav>
     </header>
-    <main class="container-fluid main">
-      <div class="row">
-        <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-          <div
-            id="carouselExampleSlidesOnly"
-            class="carousel slide"
-            data-bs-ride="carousel"
-          >
-            <div class="carousel-inner">
-              <div class="carousel-item active">
-                <img src="./img/child.jpg" class="d-block w-100" alt="slide1" />
-              </div>
-              <div class="carousel-item">
-                <img src="./img/op.jpg" class="d-block w-100" alt="slide2" />
-              </div>
-              <div class="carousel-item">
-                <img src="./img/or.jpg" class="d-block w-100" alt="slide3" />
-              </div>
-            </div>
+    <main>
+      <div
+        id="carouselExampleSlidesOnly"
+        class="carousel slide"
+        data-bs-ride="carousel"
+      >
+        <div class="carousel-inner">
+          <div class="carousel-item active">
+            <img src="./img/child.jpg" class="d-block w-100" alt="slide1" />
+          </div>
+          <div class="carousel-item">
+            <img src="./img/op.jpg" class="d-block w-100" alt="slide2" />
+          </div>
+          <div class="carousel-item">
+            <img src="./img/or.jpg" class="d-block w-100" alt="slide3" />
           </div>
         </div>
       </div>
     </main>
     <footer class="container-fluid footer bg-light">
-      <a class="footer-brand" href="index.html">
-        <img class="logo-brand" src="./img/logo_transparente.png" alt="logo" />
-      </a>
-      <h2 class="footer-copywrite">
-        © 2021 - Todos los derechos reservados. By Michelle Ticchetti.
-      </h2>
+      <div class="footer-brand">
+        <a href="index.html">
+          <img
+            class="logo-brand"
+            src="./img/logo_transparente.png"
+            alt="logo"
+          />
+        </a>
+      </div>
+      <div class="footer-copywrite">
+        <h2>© 2021 - Todos los derechos reservados. By Michelle Ticchetti.</h2>
+      </div>
       <div class="footer-rrss">
         <a href="https://www.facebook.com/">
           <img class="logo-rrss" src="./img/fb_logo.png" alt="fb_logo" />
