entrega index con bootstrap

--- a/especialidades.html
+++ b/especialidades.html
@@ -16,7 +16,7 @@
   </head>
   <body>
     <header>
-      <nav class="navbar navbar-expand-lg navbar-light bg-light">
+      <nav class="navbar navbar-expand-lg navbar-light">
         <a class="navbar-brand" href="index.html">
           <img
             class="logo-brand"
@@ -89,113 +89,144 @@
         </div>
       </nav>
     </header>
-    <main class="container-fluid">
+    <main class="container-fluid main">
       <div class="row">
+        <h2>RETINA</h2>
         <div class="col-12 especialidad">
-          <h2>RETINA</h2>
-          <h5><img src="./img/iconoDr.png" alt="foto_doctor" /></h5>
-          <h3>Dr/Dra. APELLIDO, Nombre</h3>
-          <h4>Lunes y Martes</h4>
-          <h5><a href="portal.html">Enviar Mensaje</a></h5>
-          <h5><img src="./img/iconoDr.png" alt="foto_doctor" /></h5>
-          <h3>Dr/Dra. APELLIDO, Nombre</h3>
-          <h4>Miércoles y Jueves</h4>
-          <h5><a href="portal.html">Enviar Mensaje</a></h5>
-          <h5><img src="./img/iconoDr.png" alt="foto_doctor" /></h5>
-          <h3>Dr/Dra. APELLIDO, Nombre</h3>
-          <h4>Viernes</h4>
-          <h5><a href="portal.html">Enviar Mensaje</a></h5>
+          <div>
+            <h5><img src="./img/iconoDr.png" alt="foto_doctor" /></h5>
+            <h3>Dr/Dra. APELLIDO, Nombre</h3>
+            <h4>Lunes y Martes</h4>
+            <h5><a href="portal.html">Enviar Mensaje</a></h5>
+          </div>
+          <div>
+            <h5><img src="./img/iconoDr.png" alt="foto_doctor" /></h5>
+            <h3>Dr/Dra. APELLIDO, Nombre</h3>
+            <h4>Miércoles y Jueves</h4>
+            <h5><a href="portal.html">Enviar Mensaje</a></h5>
+          </div>
+          <div>
+            <h5><img src="./img/iconoDr.png" alt="foto_doctor" /></h5>
+            <h3>Dr/Dra. APELLIDO, Nombre</h3>
+            <h4>Viernes</h4>
+            <h5><a href="portal.html">Enviar Mensaje</a></h5>
+          </div>
         </div>
       </div>
       <div class="row">
+        <h2>GLAUCOMA</h2>
         <div class="col-12 especialidad">
-          <h2>GLAUCOMA</h2>
-          <h5><img src="./img/iconoDr.png" alt="foto_doctor" /></h5>
-          <h3>Dr/Dra. APELLIDO, Nombre</h3>
-          <h4>Lunes y Martes</h4>
-          <h5><a href="portal.html">Enviar Mensaje</a></h5>
-          <h5><img src="./img/iconoDr.png" alt="foto_doctor" /></h5>
-          <h3>Dr/Dra. APELLIDO, Nombre</h3>
-          <h4>Miércoles y Jueves</h4>
+          <div>
+            <h5><img src="./img/iconoDr.png" alt="foto_doctor" /></h5>
+            <h3>Dr/Dra. APELLIDO, Nombre</h3>
+            <h4>Lunes y Martes</h4>
+            <h5><a href="portal.html">Enviar Mensaje</a></h5>
+          </div>
+          <div>
+            <h5><img src="./img/iconoDr.png" alt="foto_doctor" /></h5>
+            <h3>Dr/Dra. APELLIDO, Nombre</h3>
+            <h4>Miércoles y Jueves</h4>
+            <h5><a href="portal.html">Enviar Mensaje</a></h5>
+          </div>
         </div>
       </div>
       <div class="row">
+        <h2>CÓRNEA Y CATARATAS</h2>
         <div class="col-12 especialidad">
-          <h2>CÓRNEA Y CATARATAS</h2>
-          <h5><img src="./img/iconoDr.png" alt="foto_doctor" /></h5>
-          <h3>Dr/Dra. APELLIDO, Nombre</h3>
-          <h4>Miércoles y Jueves</h4>
-          <h5><a href="portal.html">Enviar Mensaje</a></h5>
-          <h5><img src="./img/iconoDr.png" alt="foto_doctor" /></h5>
-          <h3>Dr/Dra. APELLIDO, Nombre</h3>
-          <h4>Viernes</h4>
-          <h5><a href="portal.html">Enviar Mensaje</a></h5>
+          <div>
+            <h5><img src="./img/iconoDr.png" alt="foto_doctor" /></h5>
+            <h3>Dr/Dra. APELLIDO, Nombre</h3>
+            <h4>Miércoles y Jueves</h4>
+            <h5><a href="portal.html">Enviar Mensaje</a></h5>
+          </div>
+          <div>
+            <h5><img src="./img/iconoDr.png" alt="foto_doctor" /></h5>
+            <h3>Dr/Dra. APELLIDO, Nombre</h3>
+            <h4>Viernes</h4>
+            <h5><a href="portal.html">Enviar Mensaje</a></h5>
+          </div>
         </div>
       </div>
       <div class="row">
+        <h2>UVEÍTIS</h2>
         <div class="col-12 especialidad">
-          <h2>UVEÍTIS</h2>
-          <h5><img src="./img/iconoDr.png" alt="foto_doctor" /></h5>
-          <h3>Dr/Dra. APELLIDO, Nombre</h3>
-          <h4>Viernes</h4>
-          <h5><a href="portal.html">Enviar Mensaje</a></h5>
+          <div>
+            <h5><img src="./img/iconoDr.png" alt="foto_doctor" /></h5>
+            <h3>Dr/Dra. APELLIDO, Nombre</h3>
+            <h4>Viernes</h4>
+            <h5><a href="portal.html">Enviar Mensaje</a></h5>
+          </div>
         </div>
       </div>
       <div class="row">
+        <h2>SUPERFICIE OCULAR</h2>
         <div class="col-12 especialidad">
-          <h2>SUPERFICIE OCULAR</h2>
-          <h5><img src="./img/iconoDr.png" alt="foto_doctor" /></h5>
-          <h3>Dr/Dra. APELLIDO, Nombre</h3>
-          <h4>Lunes y Martes</h4>
-          <h5><a href="portal.html">Enviar Mensaje</a></h5>
-          <h5><img src="./img/iconoDr.png" alt="foto_doctor" /></h5>
-          <h3>Dr/Dra. APELLIDO, Nombre</h3>
-          <h4>Miércoles y Jueves</h4>
-          <h5><a href="portal.html">Enviar Mensaje</a></h5>
-          <h5><img src="./img/iconoDr.png" alt="foto_doctor" /></h5>
-          <h3>Dr/Dra. APELLIDO, Nombre</h3>
-          <h4>Viernes</h4>
-          <h5><a href="portal.html">Enviar Mensaje</a></h5>
+          <div>
+            <h5><img src="./img/iconoDr.png" alt="foto_doctor" /></h5>
+            <h3>Dr/Dra. APELLIDO, Nombre</h3>
+            <h4>Lunes y Martes</h4>
+            <h5><a href="portal.html">Enviar Mensaje</a></h5>
+          </div>
+          <div>
+            <h5><img src="./img/iconoDr.png" alt="foto_doctor" /></h5>
+            <h3>Dr/Dra. APELLIDO, Nombre</h3>
+            <h4>Miércoles y Jueves</h4>
+            <h5><a href="portal.html">Enviar Mensaje</a></h5>
+          </div>
+          <div>
+            <h5><img src="./img/iconoDr.png" alt="foto_doctor" /></h5>
+            <h3>Dr/Dra. APELLIDO, Nombre</h3>
+            <h4>Viernes</h4>
+            <h5><a href="portal.html">Enviar Mensaje</a></h5>
+          </div>
         </div>
       </div>
       <div class="row">
+        <h2>ESTRABISMO</h2>
         <div class="col-12 especialidad">
-          <h2>ESTRABISMO</h2>
-          <h5><img src="./img/iconoDr.png" alt="foto_doctor" /></h5>
-          <h3>Dr/Dra. APELLIDO, Nombre</h3>
-          <h4>Lunes y Martes</h4>
-          <h5><a href="portal.html">Enviar Mensaje</a></h5>
+          <div>
+            <h5><img src="./img/iconoDr.png" alt="foto_doctor" /></h5>
+            <h3>Dr/Dra. APELLIDO, Nombre</h3>
+            <h4>Lunes y Martes</h4>
+            <h5><a href="portal.html">Enviar Mensaje</a></h5>
+          </div>
         </div>
       </div>
       <div class="row">
+        <h2>VÍAS LAGRIMALES Y PLÁSTICA OCULAR</h2>
         <div class="col-12 especialidad">
-          <h2>VÍAS LAGRIMALES Y PLÁSTICA OCULAR</h2>
-          <h5><img src="./img/iconoDr.png" alt="foto_doctor" /></h5>
-          <h3>Dr/Dra. APELLIDO, Nombre</h3>
-          <h4>Lunes y Martes</h4>
-          <h5><a href="portal.html">Enviar Mensaje</a></h5>
+          <div>
+            <h5><img src="./img/iconoDr.png" alt="foto_doctor" /></h5>
+            <h3>Dr/Dra. APELLIDO, Nombre</h3>
+            <h4>Lunes y Martes</h4>
+            <h5><a href="portal.html">Enviar Mensaje</a></h5>
+          </div>
         </div>
       </div>
       <div class="row">
+        <h2>NEUROOFTALMOLOGÍA</h2>
         <div class="col-12 especialidad">
-          <h2>NEUROOFTALMOLOGÍA</h2>
-          <h5><img src="./img/iconoDr.png" alt="foto_doctor" /></h5>
-          <h3>Dr/Dra. APELLIDO, Nombre</h3>
-          <h4>Lunes y Miércoles</h4>
-          <h5><a href="portal.html">Enviar Mensaje</a></h5>
+          <div>
+            <h5><img src="./img/iconoDr.png" alt="foto_doctor" /></h5>
+            <h3>Dr/Dra. APELLIDO, Nombre</h3>
+            <h4>Lunes y Miércoles</h4>
+            <h5><a href="portal.html">Enviar Mensaje</a></h5>
+          </div>
         </div>
       </div>
       <div class="row">
+        <h2>BAJA VISIÓN</h2>
         <div class="col-12 especialidad">
-          <h2>BAJA VISIÓN</h2>
-          <h5><img src="./img/iconoDr.png" alt="foto_doctor" /></h5>
-          <h3>Dr/Dra. APELLIDO, Nombre</h3>
-          <h4>Lunes y Miércoles</h4>
-          <h5><a href="portal.html">Enviar Mensaje</a></h5>
+          <div>
+            <h5><img src="./img/iconoDr.png" alt="foto_doctor" /></h5>
+            <h3>Dr/Dra. APELLIDO, Nombre</h3>
+            <h4>Lunes y Miércoles</h4>
+            <h5><a href="portal.html">Enviar Mensaje</a></h5>
+          </div>
         </div>
       </div>
     </main>
-    <footer class="container-fluid footer bg-light">
+    <footer class="footer">
       <div class="footer-brand">
         <a href="index.html">
           <img
