--- a/estudios.html
+++ b/estudios.html
@@ -16,7 +16,7 @@
   </head>
   <body>
     <header>
-      <nav class="navbar navbar-expand-lg navbar-light bg-light">
+      <nav class="navbar navbar-expand-lg navbar-light">
         <a class="navbar-brand" href="index.html">
           <img
             class="logo-brand"
@@ -100,11 +100,11 @@
           <h2>AutoLensometro digital</h2>
           <h2>IOL master</h2>
           <h2>Ecometría</h2>
-          <h2>Campovisual Humphrey con pruebas centrales y periféricas</h2>
+          <h2>Campovisual Humphrey</h2>
         </div>
       </div>
     </main>
-    <footer class="container-fluid footer bg-light">
+    <footer class="footer">
       <div class="footer-brand">
         <a href="index.html">
           <img
