--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   </head>
   <body>
   <header>
-      <nav class="navbar navbar-expand-lg navbar-light bg-light">
+      <nav class="navbar navbar-expand-lg navbar-light">
         <a class="navbar-brand" href="index.html">
           <img
             class="logo-brand"
@@ -101,7 +101,7 @@
         </div>
       </section>
       <a href="portal.html" class="btn btn-main">AGENDAR UN TURNO</a>
-      <div class="row justify-content-between mt-5">
+      <div class="row justify-content-between mt-5 ppage">
         <div class="col-lg-4 col-md-4 col-xs-12 text-center">
           <h2>CONTACTO</h2>
           <p>contacto@centino.com.ar</p>
@@ -204,7 +204,7 @@
         </div>
       </div>
   </main>
-  <footer class="container-fluid footer bg-light">
+  <footer class="footer">
      <div class="footer-brand">
       <a href="index.html">
         <img class="logo-brand" src="./img/logo_transparente.png" alt="logo" />
