--- a/cirugias.html
+++ b/cirugias.html
@@ -16,7 +16,7 @@
   </head>
   <body class="container-fluid">
     <header>
-      <nav class="navbar navbar-expand-lg navbar-light bg-light">
+      <nav class="navbar navbar-expand-lg navbar-light">
         <a class="navbar-brand" href="index.html">
           <img
             class="logo-brand"
@@ -89,8 +89,8 @@
         </div>
       </nav>
     </header>
-    <main class="main">
-      <div class="row justify-content-between mt-5">
+    <main class="container-fluid main">
+      <div class="row justify-content-between sectionPpal">
         <div class="col-lg-2 col-md-2 col-xs-12 text-center">
           <h2>CIRUGÍAS REFRACTIVAS Y DE CATARATAS</h2>
           <ul class="text-center">
@@ -157,7 +157,7 @@
       </div>
     </main>
     <section class="banner"></section>
-    <footer class="container-fluid footer bg-light">
+    <footer class="footer">
       <div class="footer-brand">
         <a href="index.html">
           <img
