--- a/nuestrocentro.html
+++ b/nuestrocentro.html
@@ -16,7 +16,7 @@
   </head>
   <body class="body--container">
     <header>
-      <nav class="navbar navbar-expand-lg navbar-light bg-light">
+      <nav class="navbar navbar-expand-lg navbar-light">
         <a class="navbar-brand" href="index.html">
           <img
             class="logo-brand"
@@ -89,7 +89,7 @@
         </div>
       </nav>
     </header>
-    <main>
+    <main class="container-fluid main">
       <div
         id="carouselExampleSlidesOnly"
         class="carousel slide"
@@ -108,7 +108,7 @@
         </div>
       </div>
     </main>
-    <footer class="container-fluid footer bg-light">
+    <footer class="footer">
       <div class="footer-brand">
         <a href="index.html">
           <img
