entrega index con bootstrap

--- a/cirugias.html
+++ b/cirugias.html
@@ -14,7 +14,7 @@
     <link rel="stylesheet" href="./stylesheet/cirugias.css" />
     <title>CENTINO - Cirugías</title>
   </head>
-  <body class="container-fluid">
+  <body>
     <header>
       <nav class="navbar navbar-expand-lg navbar-light">
         <a class="navbar-brand" href="index.html">
