--- a/nuestrocentro.html
+++ b/nuestrocentro.html
@@ -14,7 +14,7 @@
     <link rel="stylesheet" href="./stylesheet/nuestrocentro.css" />
     <title>CENTINO - Nuestro Centro</title>
   </head>
-  <body class="body--container">
+  <body>
     <header>
       <nav class="navbar navbar-expand-lg navbar-light">
         <a class="navbar-brand" href="index.html">
@@ -90,6 +90,36 @@
       </nav>
     </header>
     <main class="container-fluid main">
+      <div class="row section1">
+        <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12">
+          <h4>
+            Somos un centro de alta complejidad dedicados al diagnostico y
+            tratamiento de patologías oftalmológicas.
+          </h4>
+        <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12">
+          <h4>
+            Tratamos patologías tales como: Miopía, Catarata, Opacificación
+            Capsular, Astigmatismo, Hipermetropia, Presbicia, Chalazión,
+            Estrabismo, Glaucoma, Pterigion, Desprendimiento de Retina y
+            Degeneracion macular.
+          </h4>
+        </div>
+        <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12">
+          <h4>
+            Contamos con equipamientos de última tecnología y con un equipo
+            médico calificado de gran trayectoria y calidez.
+          </h4>
+        </div>
+        <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12">
+          <h4>
+            Atendemos a pacientes de todo el país y contamos con un sistema
+            integral de agendamiento de turnos e historia clínica.
+          </h4>
+        </div>
+        </section>
+      </div>
+      <div class="row">
+      <div class="col-12">
       <div
         id="carouselExampleSlidesOnly"
         class="carousel slide"
@@ -107,6 +137,8 @@
           </div>
         </div>
       </div>
+    </div>
+    </div>
     </main>
     <footer class="footer container-fluid">
       <div class="row footerRow">
@@ -147,6 +179,7 @@
           </a>
         </div>
       </div>
+    </div>
     </footer>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"
